[feature] support qwen35 model: support group expert matmul

--- a/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
+++ b/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
@@ -90,6 +90,7 @@ model:
     chunk_size: 1024
     router_aux_loss_coef: 0.0
   use_triton_gdn: true
+  use_grouped_expert_matmul: true
   # activation_offload_plan:
   #   apply_modules:
   #     - model.language_model.layers.{*}
