--- a/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
+++ b/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
@@ -29,17 +29,12 @@ data:
     dataset_type: huggingface
     #数据集属性
     attr:
-      # system: null
       images: images
-      # videos: null
       messages: messages
       role_tag: role
       content_tag: content
       user_tag: user
       assistant_tag: assistant
-      # observation_tag: null
-      # function_tag: null
-      # system_tag: null
 
     # 数据预处理
     preprocess_parameters:
@@ -95,9 +90,6 @@ model:
     router_aux_loss_coef: 0.0
   use_triton_gdn: true
   use_grouped_expert_matmul: true
-  # activation_offload_plan:
-  #   apply_modules:
-  #     - model.language_model.layers.{*}
 
 # 训练配置
 training:
@@ -114,8 +106,8 @@ training:
   optimizer: adamw
   adam_fused: true
   save_interval: 10000
-  # load: /data2/ckpt/Qwen3-VL-30B-A3B-Instruct-dcp-lite
-  # save: save_path
+  load: dcp_load_path
+  save: save_path
   use_deter_comp: false
   profile:
     enable: false
