[feature] update shell script and config

--- a/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
+++ b/examples/fsdp2/qwen3_5/qwen3_5_moe_config.yaml
@@ -38,7 +38,7 @@ data:
 
     # 数据预处理
     preprocess_parameters:
-      model_name_or_path: &HF_MODEL_LOAD_PATH /data2/c00845082/model/qwen35_plus
+      model_name_or_path: &HF_MODEL_LOAD_PATH ./ckpt/hf_path/Qwen35-xxB
       use_fast_tokenizer: true
       split_special_tokens: false
       image_max_pixels: 262144
@@ -56,12 +56,12 @@ data:
       mask_history: false
       # tool_format: null
       dataset_dir: ./data
-      dataset: &DATASET_PATH /data2/data/qwen_data/mllm_format_llava_instruct_data.json
+      dataset: &DATASET_PATH ./data/mllm_format_llava_instruct_data.json
       cache_dir: ./cache_dir/
       overwrite_cache: false
       preprocessing_batch_size: 1000
-      preprocessing_num_workers: 0
-      max_samples: 100
+      preprocessing_num_workers: 16
+      max_samples: null
 
   # 数据加载
   dataloader_param:
@@ -80,7 +80,7 @@ model:
   model_id: qwen3_5_moe
   model_name_or_path: *HF_MODEL_LOAD_PATH
   trust_remote_code: true
-  attn_implementation: sdpa # flash_attention_2
+  attn_implementation: sdpa
   freeze:
     - model.visual
   loss_cfg:
@@ -106,8 +106,8 @@ training:
   optimizer: adamw
   adam_fused: true
   save_interval: 10000
-  load: dcp_load_path
-  save: save_path
+  load: ./ckpt/hf_path/Qwen35-xxB
+  save: ./save_path
   use_deter_comp: false
   profile:
     enable: false
