rectify kimi readme

--- a/examples/fsdp2/kimik2_5/kimik2_5_config.yaml
+++ b/examples/fsdp2/kimik2_5/kimik2_5_config.yaml
@@ -82,7 +82,7 @@ model:
   freeze:
     - vision_tower
   loss_cfg:
-    loss_type: custom
+    loss_type: raw
   text_decoder:
     activation_offload: false
 
